Fix hovercard hover overlap (hoverlap)

--- a/src/sentry/static/sentry/less/sentry-hovercard.less
+++ b/src/sentry/static/sentry/less/sentry-hovercard.less
@@ -21,6 +21,14 @@
     left: auto;
   }
 
+  .hovercard-hoverlap {
+    position: absolute;
+    bottom: -16px;
+    height: 16px;
+    left: 0;
+    right: 0;
+  }
+
   &:before {
     bottom: -22px;
     right: 20px;
